syntax = "proto3";
package types;

import "config/structs.proto";

message Request {
    oneof value {
        RequestSendMessage send = 2;
        RequestFetchMessages fetch = 3;
        RequestFlush flush = 4;
    }
}

message RequestSendMessage {
    bytes message = 1;
    config.ClientConfig recipient = 2;
}

message RequestFetchMessages {
}

message RequestFlush {
}

message Response {
    oneof value {
        ResponseException exception = 1;
        ResponseSendMessage send = 2;
        ResponseFetchMessages fetch = 3;
        ResponseFlush flush = 4;
    }
}

message ResponseException {
    string error = 1;
}

message ResponseSendMessage {
}

message ResponseFlush {
}

message ResponseFetchMessages {
    repeated bytes messages = 1; // the message is implementation specific; it might be marshaled 'ChatMessage' or something completely else
}